force-app/main/default/objects/Feedback__c/fields/Next_Week_s_plan__c.field-meta.xml
<CustomField>
    <fullName>Next_Week_s_plan__c</fullName>
    <label>Next Week&apos;s plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>