force-app/main/default/objects/Feedback__c/fields/Notes_for_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Leadership__c</fullName>
    <label>Notes for Leadership</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>