force-app/main/default/objects/Feedback__c/fields/Planned_Activities_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Planned_Activities_Deliverables__c</fullName>
    <label>Planned Activities &amp; Deliverables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>