force-app/main/default/objects/Feedback__c/fields/Progress_Summary_or_Key_Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Progress_Summary_or_Key_Accomplishments__c</fullName>
    <label>Progress Summary or Key Accomplishments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>