force-app/main/default/objects/Feedback__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>Initiation</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>