force-app/main/default/objects/Feedback__c/fields/Reporting_Week__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Week__c</fullName>
    <label>Reporting Week</label>
    <length>255</length>
    <type>Text</type>
</CustomField>