force-app/main/default/objects/Feedback__c/fields/Risk_Blockers__c.field-meta.xml
<CustomField>
    <fullName>Risk_Blockers__c</fullName>
    <label>Risk/Blockers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>