force-app/main/default/objects/Feedback__c/fields/Team_Morale__c.field-meta.xml
<CustomField>
    <fullName>Team_Morale__c</fullName>
    <label>Team Morale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Could be better</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Great</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>